--- a/about/index.html
+++ b/about/index.html
@@ -153,6 +153,11 @@
         </div>
         <ul id="menu">
             <li>
+                <a href="https://imingx.github.io/posts/" title="Post">
+                    <span>Post</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://imingx.github.io/archive/" title="Archive">
                     <span>Archive</span>
                 </a>
@@ -163,13 +168,13 @@
                 </a>
             </li>
             <li>
-                <a href="https://imingx.github.io/tags/" title="tags">
-                    <span>tags</span>
+                <a href="https://imingx.github.io/tags/" title="Tag">
+                    <span>Tag</span>
                 </a>
             </li>
             <li>
-                <a href="https://imingx.github.io/search/" title="search (Alt &#43; /)" accesskey=/>
-                    <span>search</span>
+                <a href="https://imingx.github.io/search/" title="Search (Alt &#43; /)" accesskey=/>
+                    <span>Search</span>
                 </a>
             </li>
         </ul>
