--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="author" content="">
 <link rel="canonical" href="https://imingx.github.io/" />
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.83c4eb6d61e6a4176992e4a4ce8786fc30bd40032ba8663ec5d11e285a965766.css" integrity="sha256-g8TrbWHmpBdpkuSkzoeG/DC9QAMrqGY&#43;xdEeKFqWV2Y=" rel="preload stylesheet" as="style">
-<link rel="preload" href="https://avatars.githubusercontent.com/u/54981719?v=4" as="image">
+<link rel="preload" href="https://gitee.com/imingx/picgo/raw/master/2021/202110102359713.png" as="image">
 <link rel="icon" href="https://imingx.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://imingx.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://imingx.github.io/favicon-32x32.png">
@@ -76,7 +76,7 @@
   "description": "",
   "thumbnailUrl": "https://imingx.github.io/favicon.ico",
   "sameAs": [
-      
+      "https://github.com/imingx", "mailto:ac@ming.ac"
   ]
 }
 </script>
@@ -123,6 +123,11 @@
         </div>
         <ul id="menu">
             <li>
+                <a href="https://imingx.github.io/posts/" title="Post">
+                    <span>Post</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://imingx.github.io/archive/" title="Archive">
                     <span>Archive</span>
                 </a>
@@ -133,36 +138,40 @@
                 </a>
             </li>
             <li>
-                <a href="https://imingx.github.io/tags/" title="tags">
-                    <span>tags</span>
+                <a href="https://imingx.github.io/tags/" title="Tag">
+                    <span>Tag</span>
                 </a>
             </li>
             <li>
-                <a href="https://imingx.github.io/search/" title="search (Alt &#43; /)" accesskey=/>
-                    <span>search</span>
+                <a href="https://imingx.github.io/search/" title="Search (Alt &#43; /)" accesskey=/>
+                    <span>Search</span>
                 </a>
             </li>
         </ul>
     </nav>
 </header>
 <main class="main"><div class="profile">
-    <div class="profile_inner"><img src="https://avatars.githubusercontent.com/u/54981719?v=4" alt="&lt;title of image as alt&gt;"
+    <div class="profile_inner"><img src="https://gitee.com/imingx/picgo/raw/master/2021/202110102359713.png" alt="&lt;title of image as alt&gt;"
             height="120" width="120" />
-        <h1>主标题</h1>
-        <span>This is subtitle</span><div class="social-icons">
+        <h1>晴天</h1>
+        <span></span><div class="social-icons">
+    <a href="https://github.com/imingx" target="_blank" rel="noopener noreferrer me" title="Github">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path
+        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+    </path>
+</svg>
+    </a>
+    <a href="mailto:ac@ming.ac" target="_blank" rel="noopener noreferrer me" title="Email">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+    <polyline points="22,6 12,13 2,6"></polyline>
+</svg>
+    </a>
 </div>
 
-        <div class="buttons">
-            <a class="button" href="/archive" rel="noopener" title="Archive">
-                <span class="button-inner">Archive</span>
-            </a>
-            <a class="button" href="/posts" rel="noopener" title="Post">
-                <span class="button-inner">Post</span>
-            </a>
-            <a class="button" href="https://github.com/" rel="noopener" title="Github">
-                <span class="button-inner">Github</span>
-            </a>
-        </div>
     </div>
 </div>
 
