--- a/search/index.html
+++ b/search/index.html
@@ -154,6 +154,11 @@
         </div>
         <ul id="menu">
             <li>
+                <a href="https://imingx.github.io/posts/" title="Post">
+                    <span>Post</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://imingx.github.io/archive/" title="Archive">
                     <span>Archive</span>
                 </a>
@@ -164,13 +169,13 @@
                 </a>
             </li>
             <li>
-                <a href="https://imingx.github.io/tags/" title="tags">
-                    <span>tags</span>
+                <a href="https://imingx.github.io/tags/" title="Tag">
+                    <span>Tag</span>
                 </a>
             </li>
             <li>
-                <a href="https://imingx.github.io/search/" title="search (Alt &#43; /)" accesskey=/>
-                    <span class="active">search</span>
+                <a href="https://imingx.github.io/search/" title="Search (Alt &#43; /)" accesskey=/>
+                    <span class="active">Search</span>
                 </a>
             </li>
         </ul>
