--- a/about-hugo/index.html
+++ b/about-hugo/index.html
@@ -5,9 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>About Hugo | Ming Blog</title>
+<title>About Hugo | Blog</title>
 <meta name="keywords" content="" />
-<meta name="description" content="About Hugo - Ming Blog">
+<meta name="description" content="About Hugo - Blog">
 <meta name="author" content="">
 <link rel="canonical" href="https://imingx.github.io/about-hugo/" />
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.83c4eb6d61e6a4176992e4a4ce8786fc30bd40032ba8663ec5d11e285a965766.css" integrity="sha256-g8TrbWHmpBdpkuSkzoeG/DC9QAMrqGY&#43;xdEeKFqWV2Y=" rel="preload stylesheet" as="style">
@@ -102,7 +102,7 @@
   },
   "publisher": {
     "@type": "Organization",
-    "name": "Ming Blog",
+    "name": "Blog",
     "logo": {
       "@type": "ImageObject",
       "url": "https://imingx.github.io/favicon.ico"
@@ -127,7 +127,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://imingx.github.io/" accesskey="h" title="Ming Blog (Alt + H)">Ming Blog</a>
+            <a href="https://imingx.github.io/" accesskey="h" title="Blog (Alt + H)">Blog</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -163,8 +163,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://imingx.github.io/categories/" title="Category">
-                    <span>Category</span>
+                <a href="https://imingx.github.io/categories/" title="Cat">
+                    <span>Cat</span>
                 </a>
             </li>
             <li>
@@ -199,7 +199,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2021 <a href="https://imingx.github.io/">Ming Blog</a></span>
+    <span>&copy; 2021 <a href="https://imingx.github.io/">Blog</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
