--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Ming Blog</title>
+<title>Blog</title>
 
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://imingx.github.io/" />
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.83c4eb6d61e6a4176992e4a4ce8786fc30bd40032ba8663ec5d11e285a965766.css" integrity="sha256-g8TrbWHmpBdpkuSkzoeG/DC9QAMrqGY&#43;xdEeKFqWV2Y=" rel="preload stylesheet" as="style">
-<link rel="preload" href="https://gitee.com/imingx/picgo/raw/master/2021/202110102359713.png" as="image">
+<link rel="preload" href="/images/20211012Avatar.jpg" as="image">
 <link rel="icon" href="https://imingx.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://imingx.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://imingx.github.io/favicon-32x32.png">
@@ -58,20 +58,20 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Ming Blog" />
+</noscript><meta property="og:title" content="Blog" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://imingx.github.io/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Ming Blog"/>
+<meta name="twitter:title" content="Blog"/>
 <meta name="twitter:description" content=""/>
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "Ming Blog",
+  "name": "Blog",
   "url": "https://imingx.github.io/",
   "description": "",
   "thumbnailUrl": "https://imingx.github.io/favicon.ico",
@@ -97,7 +97,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://imingx.github.io/" accesskey="h" title="Ming Blog (Alt + H)">Ming Blog</a>
+            <a href="https://imingx.github.io/" accesskey="h" title="Blog (Alt + H)">Blog</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -133,8 +133,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://imingx.github.io/categories/" title="Category">
-                    <span>Category</span>
+                <a href="https://imingx.github.io/categories/" title="Cat">
+                    <span>Cat</span>
                 </a>
             </li>
             <li>
@@ -151,9 +151,9 @@
     </nav>
 </header>
 <main class="main"><div class="profile">
-    <div class="profile_inner"><img src="https://gitee.com/imingx/picgo/raw/master/2021/202110102359713.png" alt="&lt;title of image as alt&gt;"
+    <div class="profile_inner"><img src="/images/20211012Avatar.jpg" alt="Xiaohei"
             height="120" width="120" />
-        <h1>晴天</h1>
+        <h1>明日</h1>
         <span></span><div class="social-icons">
     <a href="https://github.com/imingx" target="_blank" rel="noopener noreferrer me" title="Github">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -178,7 +178,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2021 <a href="https://imingx.github.io/">Ming Blog</a></span>
+    <span>&copy; 2021 <a href="https://imingx.github.io/">Blog</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
