--- a/search/index.html
+++ b/search/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Search | Ming Blog</title>
+<title>Search | Blog</title>
 <meta name="keywords" content="" />
 <meta name="description" content="search">
 <meta name="author" content="">
@@ -103,7 +103,7 @@
   },
   "publisher": {
     "@type": "Organization",
-    "name": "Ming Blog",
+    "name": "Blog",
     "logo": {
       "@type": "ImageObject",
       "url": "https://imingx.github.io/favicon.ico"
@@ -128,7 +128,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://imingx.github.io/" accesskey="h" title="Ming Blog (Alt + H)">Ming Blog</a>
+            <a href="https://imingx.github.io/" accesskey="h" title="Blog (Alt + H)">Blog</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -164,8 +164,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://imingx.github.io/categories/" title="Category">
-                    <span>Category</span>
+                <a href="https://imingx.github.io/categories/" title="Cat">
+                    <span>Cat</span>
                 </a>
             </li>
             <li>
@@ -200,7 +200,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2021 <a href="https://imingx.github.io/">Ming Blog</a></span>
+    <span>&copy; 2021 <a href="https://imingx.github.io/">Blog</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
