--- a/search/index.html
+++ b/search/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="search">
 <meta name="author" content="">
 <link rel="canonical" href="https://imingx.github.io/search/" />
-<link crossorigin="anonymous" href="/assets/css/stylesheet.min.83c4eb6d61e6a4176992e4a4ce8786fc30bd40032ba8663ec5d11e285a965766.css" integrity="sha256-g8TrbWHmpBdpkuSkzoeG/DC9QAMrqGY&#43;xdEeKFqWV2Y=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.min.97205c369555a18d88de14e7df9c15849f512bad07e3a7910316eec08663939b.css" integrity="sha256-lyBcNpVVoY2I3hTn35wVhJ9RK60H46eRAxbuwIZjk5s=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.min.a6198b2394defa4b8c3af709e5f4a2f6014b6e718ec47b96a44f2bb378e505d9.js" integrity="sha256-phmLI5Te&#43;kuMOvcJ5fSi9gFLbnGOxHuWpE8rs3jlBdk="></script>
 <link rel="icon" href="https://imingx.github.io/images/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://imingx.github.io/images/favicon-16x16.png">
