--- a/index.html
+++ b/index.html
@@ -171,6 +171,12 @@
             <a class="button" href="/posts" rel="noopener" title="Post">
                 <span class="button-inner">Post</span>
             </a>
+            <a class="button" href="https://note.ming.ac" rel="noopener" title="Note">
+                <span class="button-inner">Note</span>
+            </a>
+            <a class="button" href="https://diary.ming.ac" rel="noopener" title="Diary">
+                <span class="button-inner">Diary</span>
+            </a>
         </div>
     </div>
 </div>
