--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <a class="button" href="/posts" rel="noopener" title="Post">
                 <span class="button-inner">Post</span>
             </a>
-            <a class="button" href="https://note.ming.ac" rel="noopener" title="Note">
+            <a class="button" href="https://notes.ming.ac" rel="noopener" title="Note">
                 <span class="button-inner">Note</span>
             </a>
             <a class="button" href="https://diary.ming.ac" rel="noopener" title="Diary">
